Bug 832760 - Make FindServerWithNewsgroup return NS_OK regardless of the collation of the server list. r=jcranmer